// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionsRoundButtonGroup snapshot test should render properly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main btnGroup"
  >
    <button
      class="bp3-button StyledProps--font Button--button Button--iconOnly StyledProps--main"
      type="button"
      value="test"
    />
  </div>
</div>
`;

exports[`RoundButtonGroup snapshot test should render properly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main btnGroup"
  >
    <button
      class="bp3-button"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        a
      </span>
    </button>
  </div>
</div>
`;
